--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
+    "dev": "vite --mode development",
+    "build": "vite build --mode production",
     "preview": "vite preview"
   },
   "dependencies": {
     "amfe-flexible": "^2.2.1",
     "axios": "^1.6.5",
     "pinia": "^2.1.7",
+    "swiper": "^11.0.5",
     "vant": "^4.8.2",
     "vue": "^3.3.11",
     "vue-photo-preview": "^1.1.3",
@@ -20,8 +21,11 @@
   "devDependencies": {
     "@vant/auto-import-resolver": "^1.0.2",
     "@vitejs/plugin-vue": "^4.5.2",
+    "node-sass": "^9.0.0",
     "postcss": "^8.4.33",
     "postcss-pxtorem": "^6.0.0",
+    "sass": "^1.70.0",
+    "sass-loader": "^7.3.1",
     "unplugin-vue-components": "^0.26.0",
     "vite": "^5.0.8"
   }
